# rubrics-gen-val

./: .env.example  .gitignore  ALGORITHMS.md  EXPERIMENTS.md  README.md  USAGE.md  pyproject.toml
cae-rag/: .env.example  .gitignore  pyproject.toml
cae-rag/cae_rag/: __init__.py  compare.py  config.py  generate.py  index.py  ingest.py  react.py  retrieve.py
cae-rag/scripts/: _smoke_milvus.py  build_index.py  compare_results.py  run_rag.py  run_react.py
cae-rag/tests/: test_compare.py  test_config.py  test_generate.py  test_index.py  test_ingest.py  test_react.py  test_retrieve.py
cae-rubrics-eval/: .env.example  .gitignore  README.md  pyproject.toml  score.py
cae-rubrics-eval/cae_eval/: __init__.py  anchor.py  judge.py  schema.py  scorer.py  scoring.py
cae-rubrics-eval/data/: CAE-anchor-scores.json  CAE-v2.0-1-rubrics.json
cae-rubrics-eval/data-v3/: CAE-v3.0-anchor-scores.json  CAE-v3.0-rubrics.json
cae-rubrics-eval/examples/: eval_example.json  predictions_example.jsonl
data/: CAE-v2.0-1 RLM Scoring Report.md  CAE-v2.0-1-rubrics-v2.json  CAE-v2.0-1-rubrics-v3.json  CAE-v2.0-1-rubrics-v4.json  CAE-v2.0-1-rubrics-v5.json  CAE-v2.0-1-rubrics.json  CAE-v2.0-1.json
outputs/peek/: cae-v2.0-1-map-frozen.json  cae-v2.0-1-v5-map-frozen.json
outputs/rlm-answers/: cae-v2.0-1-v2.jsonl  cae-v2.0-1-v3.jsonl  cae-v2.0-1-v4.jsonl  cae-v2.0-1-v5.jsonl  cae-v2.0-1.jsonl
outputs/scoring/: cae-v2.0-1-diff-v1-v2.md  cae-v2.0-1-diff-v1-v3.md  cae-v2.0-1-diff-v1-v4.md  cae-v2.0-1-diff-v1-v5.md  cae-v2.0-1-diff-v2-v3.md  cae-v2.0-1-diff-v3-v4.md  cae-v2.0-1-diff-v3-v5.md  cae-v2.0-1-diff-v4-v5.md  cae-v2.0-1-report-v2.md  cae-v2.0-1-report-v3.md  cae-v2.0-1-report-v4.md  cae-v2.0-1-report-v5.md  cae-v2.0-1-report.md  cae-v2.0-1-scores-v2.json  cae-v2.0-1-scores-v3.json  cae-v2.0-1-scores-v4.json  cae-v2.0-1-scores-v5.json  cae-v2.0-1-scores.json
rlm_pipeline/: generate_rlm_answers.py  score_rlm_answers.py
rlm_pipeline/rubrics/: anchor.py  chunker.py  index.py  (+2 more)
run/: 01_build_index.py  02_generate_rubrics.py  03_validate.py  04_score_predictions.py  build_anchors.py
src/: generate_rlm_answers.py  rubrics_diff_report.py  rubrics_report.py  score_rlm_answers.py
tests/: test_generate_rlm_answers.py  test_papers_qa_peek_wiring.py  test_papers_qa_prompts.py  test_peek_distiller_addendum.py  test_peek_integration.py  test_rubrics_diff_report.py  test_rubrics_report.py  test_score_rlm_answers.py
(+184 files in other folders)
