[project]
name = "cae-rubrics-eval"
version = "1.0.0"
description = "Standalone scoring kit for the CAE-v2.0-1 rubric set (94 items, locked judge=gpt-5.4-mini)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cae_eval"]

[tool.setuptools.package-data]
cae_eval = ["templates/*.txt"]
